fixing scrolling issues on mobile

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -21,8 +21,7 @@ section {
     width: 100vw;
 }
 #first-section, #first-part, #second-part {
-    height: 92vh;
-    margin-top: 8vh;
+    height: 100vh;
 }
 .flex {
     display: flex;
